--- a/hw2/pie.html
+++ b/hw2/pie.html
@@ -102,11 +102,11 @@
         <p class="copyright">Copyright &copy; 2012 Granny's Pies |<br>
             A Granny's Pies Production     |<br>
             All rights reserved   |</p>
-        <a href="https://validator.w3.org/check?uri=https://abubakr4467.github.io/wap-course/">
+        <a href="https://github.com/Abubakr4467/cs472/commit/8bf683af920c5b8c12112967f86464c6e50287e0">
             <img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
            
         </a>
-        <a href="https://validator.w3.org/check?uri=https://abubakr4467.github.io/wap-course/">
+        <a href="https://github.com/Abubakr4467/cs472/commit/8bf683af920c5b8c12112967f86464c6e50287e0">
             <img src="http://mumstudents.org/cs472/2014-09/images/w3c-css.png" alt="css validator"/>
 
         </a>
