--- a/hw3/tmnt.html
+++ b/hw3/tmnt.html
@@ -195,8 +195,9 @@
 
 
     <div id="validator" >
-        <a href="http://validator.w3.org/check/referer"><img src="w3c-html.png" alt="Valid HTML5" /></a> <br />
-        <a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="w3c-css.png" alt="Valid CSS" /></a>
+        <a href="https://validator.w3.org/check?uri=https://abubakr4467.github.io/cs472/hw3/tmnt.html"><img src="w3c-html.png" alt="Valid HTML5" /></a> <br />
+        <a href="https://validator.w3.org/check?uri=https://abubakr4467.github.io/cs472/hw3/movie.css"><img src="w3c-css.png" alt="Valid CSS" /></a>
+
     </div>
 
 </div>
