--- a/hw7/debit.html
+++ b/hw7/debit.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Back Account</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="bank.css">
     </head>
     <body>
         <div>
@@ -15,7 +15,7 @@
             <button id="debit">Debit</button>
         </div>
         <div>
-            <button onclick="changePath('index.html')">Back to home</button>
+            <button onclick="changePath('bank_account.html')">Back to home</button>
         </div>
         <script src="bank.js"></script>
     </body>
