--- a/hw7/deposit.html
+++ b/hw7/deposit.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Back Account</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="bank.css">
     </head>
     <body>
         <div>
@@ -15,8 +15,8 @@
             <button id="deposit">Deposit</button>
         </div>
         <div>
-            <button onclick="changePath('index.html')">Back to home</button>
+            <button onclick="changePath('bank_account.html')">Back to home</button>
         </div>
-        <script src="index.js"></script>
+        <script src="bank.js"></script>
     </body>
 </html>
